remove vertical class from footer, add page container to body in main handlebars to keep footer at bottom, move footer class to bottom of style sheet, page container class, uigrid class margin to 0 to prevent content overlapping with footer

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,15 +2,6 @@
   background-color: #003049 !important;
 }
 
-.footer {
-  /* position: fixed !important; */
-  margin-top: 50px;
-  bottom: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  color: white;
-}
-
 .margin-left {
   margin-left: 10% !important;
 }
@@ -73,4 +64,26 @@ body {
 /* hide lines on menu */
 .ui.menu .item:before {
   width: 0px;
+}
+
+/*to keep footer from overlapping with content - margin bottom*/
+#page-container {
+  position: relative;
+  min-height: 100vh;
+  margin-bottom: 50px;
+}
+
+/*removes negative margin of -1rem, causes overlapping with footer*/
+.ui.grid {
+  margin-bottom: 0 !important;
+}
+
+/*fixed footer with margin*/
+.footer {
+  position: fixed !important;
+  margin-top: 50px !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  color: white;
 }
